<resources>
    <string name="app_name">fitness</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--Preferences-->
    <string name="pref_category_unit_key">pref_category_units</string>
    <string name="pref_category_personal_key">pref_category_personal</string>
    <string name="pref_category_goal_key">pref_category_goal</string>

    <string name="pref_category_unit_label">Units</string>
    <string name="pref_category_personal_label">Personal</string>
    <string name="pref_category_goal_label">Goals</string>

    <string name="pref_label_unit_energy">Energy</string>
    <string name="pref_label_unit_distance">Distance</string>
    <string name="pref_label_unit_weight">Weight</string>
    <string name="pref_label_personal_lifestyle">Lifestyle</string>
    <string name="pref_label_personal_gender">Gender</string>
    <string name="pref_label_personal_weight">Weight</string>
    <string name="pref_label_personal_height">Height</string>
    <string name="pref_label_personal_name">Nickname</string>
    <string name="pref_label_personal_age">Age</string>
    <string name="pref_label_goal_energy">Energy Goal</string>
    <string name="pref_label_goal_steps">Step Goal</string>

    <string name="pref_key_unit_energy">pref_unit_energy</string>
    <string name="pref_key_unit_distance">pref_unit_distance</string>
    <string name="pref_key_unit_weight">pref_unit_weight</string>
    <string name="pref_key_personal_lifestyle">pref_personal_lifestyle</string>
    <string name="pref_key_personal_gender">pref_personal_gender</string>
    <string name="pref_key_personal_weight">pref_personal_weight</string>
    <string name="pref_key_personal_height">pref_personal_height</string>
    <string name="pref_key_personal_name">pref_personal_name</string>
    <string name="pref_key_personal_age">pref_personal_age</string>
    <string name="pref_key_goal_energy">pref_goal_energy</string>
    <string name="pref_key_goal_steps">pref_goal_steps</string>

    <!--A hole that we have dug too deep into but all string values must remain in Pascal Case of enums-->
    <string-array name="pref_values_generic_units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_values_energy_units">
        <item>Kilojoules</item>
        <item>Calories</item>
    </string-array>

    <string-array name="pref_values_lifestyle">
        <item>Sedentary</item>
        <item>Moderate</item>
        <item>Active</item>
    </string-array>

    <string-array name="pref_values_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
