<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_category_unit_key"
        android:title="@string/pref_category_unit_label">
        <ListPreference
            android:defaultValue="Calories"
            android:dialogTitle="Energy"
            android:entries="@array/pref_values_energy_units"
            android:entryValues="@array/pref_values_energy_units"
            android:key="@string/pref_key_unit_energy"
            android:summary="%s"
            android:title="@string/pref_label_unit_energy" />

        <ListPreference
            android:defaultValue="Metric"
            android:dialogTitle="Distance"
            android:entries="@array/pref_values_generic_units"
            android:entryValues="@array/pref_values_generic_units"
            android:key="@string/pref_key_unit_distance"
            android:summary="%s"
            android:title="@string/pref_label_unit_distance" />

        <ListPreference
            android:defaultValue="Metric"
            android:dialogTitle="Weight"
            android:entries="@array/pref_values_generic_units"
            android:entryValues="@array/pref_values_generic_units"
            android:key="@string/pref_key_unit_weight"
            android:summary="%s"
            android:title="@string/pref_label_unit_weight" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_category_personal_key"
        android:title="@string/pref_category_personal_label">

        <EditTextPreference
            android:dialogTitle="Nickname"
            android:key="@string/pref_key_personal_name"
            android:title="@string/pref_label_personal_name" />

        <ListPreference
            android:defaultValue="Moderate"
            android:dialogTitle="Lifestyle"
            android:entries="@array/pref_values_lifestyle"
            android:entryValues="@array/pref_values_lifestyle"

            android:key="@string/pref_key_personal_lifestyle"
            android:summary="%s"
            android:title="@string/pref_label_personal_lifestyle" />

        <ListPreference
            android:defaultValue="Male"
            android:dialogTitle="Gender"
            android:entries="@array/pref_values_gender"
            android:entryValues="@array/pref_values_gender"
            android:key="@string/pref_key_personal_gender"
            android:summary="%s"
            android:title="@string/pref_label_personal_gender" />

        <EditTextPreference
            android:defaultValue="185"
            android:dialogTitle="Height"
            android:key="@string/pref_key_personal_height"
            android:title="@string/pref_label_personal_height" />

        <EditTextPreference
            android:defaultValue="85"
            android:dialogTitle="Weight"
            android:key="@string/pref_key_personal_weight"
            android:title="@string/pref_label_personal_weight" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_category_goal_key"
        android:title="@string/pref_category_goal_label">

        <EditTextPreference
            android:defaultValue="2000"
            android:dialogTitle="Energy Goal"
            android:key="@string/pref_key_goal_energy"
            android:title="@string/pref_label_goal_energy" />

        <EditTextPreference
            android:defaultValue="2000"
            android:dialogTitle="Step Goal"
            android:key="@string/pref_key_goal_steps"
            android:title="@string/pref_label_goal_steps" />

    </PreferenceCategory>

</PreferenceScreen>